--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <div class="container">
   <!-- Header -->
-  <header>
+  <header class="span-24">
     <div class="span-4">
       <img src="/images/header-logo.png" width="140" height="140" alt="Ubicomp 2012" />
     </div>
@@ -34,6 +34,37 @@
       September 17-21, 2012
     </div>
   </header>
+  
+  <!-- Navigation -->
+  <ul id="navbar">
+    <li>
+      <a href="#" class="active">Ubicomp 2012</a>
+    </li>
+    <li>
+      <a href="#">Program</a>
+    </li>
+    <li>
+      <a href="#">Attending</a>
+    </li>
+    <li>
+      <a href="#">Authors</a>
+    </li>
+    <li>
+      <a href="#">Sponsors</a>
+    </li>
+    <li>
+      <a href="#">Recruiters</a>
+    </li>
+    <li>
+      <a href="#">Exhibitors</a>
+    </li>
+    <li>
+      <a href="#">Organizers</a>
+    </li>
+    <li>
+      <a href="#">Press</a>
+    </li>
+  </ul>
   
   <!-- Content -->
   <div id="content">
