Updates on content and footer. - Added content and footer. - Fixed wrap around content and footer. - Added striped background. - Made logo bigger.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
   <!-- Header -->
   <header class="span-24">
     <div class="span-4">
-      <img src="/images/header-logo.png" width="140" height="140" alt="Ubicomp 2012" />
+      <a href="/">
+        <img id="header-logo" src="/images/header-logo.png" width="160" height="160" alt="Ubicomp 2012" />
+      </a>
     </div>
     <div class="span-16" id="header-subtitle">
       14th ACM International Conference on Ubiquitous Computing<br/>
@@ -38,7 +40,7 @@
   <!-- Navigation -->
   <ul id="navbar">
     <li>
-      <a href="#" class="active">Ubicomp 2012</a>
+      <a href="/" class="active">Ubicomp 2012</a>
     </li>
     <li>
       <a href="#">Program</a>
@@ -66,13 +68,22 @@
     </li>
   </ul>
   
-  <!-- Content -->
-  <div id="content">
+  <!-- Content Wrap-->
+  <div id="content-wrap">
+    <!-- Content -->
+    <div class="span-18" id="content">
+      &nbsp;
+    </div>
+  
+    <!-- Sidebar -->
+    <div class="span6 last" id="sidebar">
+      &nbsp;
+    </div>
   </div>
   
   <!-- Footer -->
   <footer>
-    
+    Designed by <a href="http://ianli.com">Ian Li</a>.
   </footer>
 </div>
 
