Added content to logo. - Added styles to footer. - Added footer logo.

--- a/index.html
+++ b/index.html
@@ -67,12 +67,30 @@
     </li>
     <li>
       <a href="#">Program</a>
+      <!-- Menu -->
+      <ul>
+        <li><a href="#">Additional Link #1</a></li>
+        <li><a href="#">Additional Link #2</a></li>
+        <li><a href="#">Additional Link #2</a></li>
+      </ul>
     </li>
     <li>
       <a href="#">Attending</a>
+      <!-- Menu -->
+      <ul>
+        <li><a href="#">Additional Link #1</a></li>
+        <li><a href="#">Additional Link #2</a></li>
+        <li><a href="#">Additional Link #2</a></li>
+      </ul>
     </li>
     <li>
       <a href="#">Authors</a>
+      <!-- Menu -->
+      <ul>
+        <li><a href="#">Additional Link #1</a></li>
+        <li><a href="#">Additional Link #2</a></li>
+        <li><a href="#">Additional Link #2</a></li>
+      </ul>
     </li>
     <li>
       <a href="#">Sponsors</a>
@@ -278,19 +296,58 @@
   <!-- Footer -->
   <footer class="span-24">
     <div class="span-4">
-      Ubicomp 2012
+      <img id="footer-logo" src="images/footer-logo.png" width="140" height="140" alt="Ubicomp 2012" />
     </div>
     <div class="span-5">
-      &nbsp;
+      <h6>Ubicomp 2012</h6>
+      <p>
+        <a href="/">Home</a><br/>
+        <a href="#">About Us</a><br/>
+        <a href="#">Student Volunteers</a><br/>
+        <a href="#">Sponsors</a><br/>
+        <a href="#">Recruiters</a><br/>
+        <a href="#">Exhibitors</a>
+      </p>
     </div>
     <div class="span-5">
-      &nbsp;
+      <h6>Attend</h6>
+      <p>
+        <a href="#">About Pittsburgh</a><br/>
+        <a href="#">Housing</a><br/>
+        <a href="#">Registration &amp; Visas</a>
+      </p>
     </div>
     <div class="span-5">
-      &nbsp;
+      <h6>Participate</h6>
+      <p>
+        <a href="#">Submissions &amp; Dates</a><br/>
+        <a href="#">Papers &amp; Notes</a><br/>
+        <a href="#">Doctoral Consortium</a><br/>
+        <a href="#">Interactivity</a><br/>
+        <a href="#">Panels</a><br/>
+        <a href="#">SIG Meetings</a><br/>
+        <a href="#">Student Competitions</a><br/>
+        <a href="#">Videos</a><br/>
+        <a href="#">Works-in-Progress</a><br/>
+        <a href="#">Workshops</a>
+      </p>
     </div>
     <div class="span-5 last">
-      Designed by <a href="http://ianli.com">Ian Li</a>.
+      <h6>Brought to you by</h6>
+      <p>
+        <a href="http://www.sigchi.org/">SIGCHI</a><br/>
+        <a href="http://www.sigmobile.org/">SIGMOBILE</a>
+      </p>
+      
+      <h6>Locally organized by</h6>
+      <p>
+        <a href="http://www.cmu.edu/">Carnegie Mellon University</a>
+      </p>
+      
+      <h6>Web design by</h6>
+      <p>
+        <a href="http://ianli.com">Ian Li</a>
+      </p>
     </div>
   </footer>
 </div>
