Added logo to footer

--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
         <a href="http://www.cmu.edu/">Carnegie Mellon University</a>
       </p>
       
-      <h6>Web design by</h6>
+      <h6>Logo and web design by</h6>
       <p>
         <a href="http://ianli.com">Ian Li</a>
       </p>
